Don't set a GC
Should be a per-app choice.